# flatten-directory

./: README.md  pyproject.toml
src/flatten_directory/: __init__.py
