[project]
name = "flatten-directory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Tran", email = "mail@tylertran.net" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = []

[project.scripts]
flatten-directory = "flatten_directory:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
